bot problem